# rasterizer

./: CMakeLists.txt  text.py
sources/: Context.h  kernel.cu  main.cpp
